first_runtime parameter was replaced for counts parameter

--- a/app/controller/_control_get_events/swag.yaml
+++ b/app/controller/_control_get_events/swag.yaml
@@ -18,11 +18,7 @@ parameters:
     in: query
     schema:
       type: string
-  - name: first_runtime
-    in: query
-    schema:
-      type: string
-  - name: next_runtime
+  - name: runtime
     in: query
     schema:
       type: string
@@ -48,10 +44,10 @@ responses:
               state:
                 type: string
                 description: State of the event ("active" or "paused").
-              first_runtime:
+              counts:
                 type: string
-                description: First time when the event was or will be run.
-              next_runtime:
+                description: Number of times the event has been run.
+              runtime:
                 type: string
                 description: Next time when the event will be run.
               period:
