--- a/app/controller/_control_delete_event/swag.yaml
+++ b/app/controller/_control_delete_event/swag.yaml
@@ -1,10 +1,5 @@
-Delete an event from a request body.
+Delete an event from an event ID.
 ---
-
-description: |
-  Events will be filtered by each query parameter.
-
-  If no query parameters are parsed, all events will be retrieved.
 
 tags:
 - Events
@@ -41,10 +36,19 @@ responses:
               period:
                 type: string
                 description: How often the event will be repeated in format "Ad Bh Cm", where A, B, C are days, hours and minutes, respectively.
+              sender_name:
+                type: string
+                description: Name to be displayed as the email sender.
+              subject:
+                type: string
+                description: Email subject.
+              is_html:
+                type: boolean
+                description: Whether the message is in HTML format or not.
               message:
                 type: string
-                description: Message to be sent by the event.
+                description: Message to be sent.
   404:
-    description: Event does not exist.
+    description: The event does not exist.
   500:
     description: Unexpected error.
