--- a/app/controller/_control_get_events/swag.yaml
+++ b/app/controller/_control_get_events/swag.yaml
@@ -26,6 +26,18 @@ parameters:
     in: query
     schema:
       type: string
+  - name: to
+    in: query
+    schema:
+      type: string
+  - name: cc
+    in: query
+    schema:
+      type: string
+  - name: bcc
+    in: query
+    schema:
+      type: string
   - name: sender_name
     in: query
     schema:
@@ -61,6 +73,21 @@ responses:
               period:
                 type: string
                 description: How often the event will be repeated in format "Ad Bh Cm", where A, B, C are days, hours and minutes, respectively.
+              to:
+                type: array
+                description: Main recipients of the email 
+                items:
+                  type: string
+              cc:
+                type: array
+                description: Carbon copy recipients of the email 
+                items:
+                  type: string
+              bcc:
+                type: array
+                description: Blind carbon copy recipients of the email 
+                items:
+                  type: string
               sender_name:
                 type: string
                 description: Name to be displayed as the email sender.
