--- a/app/controller/_control_put_event/swag.yaml
+++ b/app/controller/_control_put_event/swag.yaml
@@ -9,6 +9,9 @@ description: |
   - state
   - period
   - runtime
+  - to
+  - cc
+  - bcc
   - sender_name
   - subject
   - is_html
@@ -39,6 +42,21 @@ requestBody:
           period:
             type: string
             description: How often the event will be repeated in format "Ad Bh Cm", where A, B, C are days, hours and minutes, respectively.
+          to:
+            type: array
+            description: Main recipients of the email 
+            items:
+              type: string
+          cc:
+            type: array
+            description: Carbon copy recipients of the email 
+            items:
+              type: string
+          bcc:
+            type: array
+            description: Blind carbon copy recipients of the email 
+            items:
+              type: string
           sender_name:
             type: string
             description: Name to be displayed as the email sender.
@@ -75,6 +93,21 @@ responses:
             period:
               type: string
               description: How often the event will be repeated in format "Ad Bh Cm", where A, B, C are days, hours and minutes, respectively.
+            to:
+              type: array
+              description: Main recipients of the email 
+              items:
+                type: string
+            cc:
+              type: array
+              description: Carbon copy recipients of the email 
+              items:
+                type: string
+            bcc:
+              type: array
+              description: Blind carbon copy recipients of the email 
+              items:
+                type: string
             sender_name:
               type: string
               description: Name to be displayed as the email sender.
